# pico-mcp2515

./: CMakeLists.txt  copy_build.py
assets/: data.txt
include/mcp2515/: mcp2515.cpp  mcp2515.h
src/: core1.cpp  core1.h  pico-mcp2515.cpp  pico-mcp2515.h
src/lin/: lin.cpp  lin.h
